# BorisControlLib

./: CMakeLists.txt  README.md  Setup.sh
BorisPNCCommon/Trajectory/: Trajectory.cpp  Trajectory.h
controllers/: PIDController.cpp  PIDController.h  PurePursuit.cpp  PurePursuit.h  SimpleTracker.cpp  SimpleTracker.h
simulator/: 123.cpp  CMakeLists.txt  PIDSimulator.cpp
simulator/controllers/: CMakeLists.txt  PIDSimulator.cpp  PPSimulator.cpp  SimpleTrackerSimulator.cpp
